hard-gists/fa0647722365f5a4b2ad/run.log
=== Docker Run Log for fa0647722365f5a4b2ad ===
Started at: Mi 29. Okt 21:38:34 CET 2025

[2025-10-29 21:38:35] START: Running container for fa0647722365f5a4b2ad
[2025-10-29 21:38:35] SUCCESS: Container 113247820ee6dacb2bcb843aa626e8ed08496c8d84d26ab8be4d87cb4fbcb678 started for fa0647722365f5a4b2ad
=== Container logs for fa0647722365f5a4b2ad ===
  File "/snippet.py", line 31
    print "Opening..." + fname + "#" + opts
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for fa0647722365f5a4b2ad ===
[2025-10-29 21:38:37] INFO: Container 113247820ee6dacb2bcb843aa626e8ed08496c8d84d26ab8be4d87cb4fbcb678 has stopped
